Added GNUTLS_STATELESS_COMPRESSION flag to gnutls_init().

--- a/doc/cha-intro-tls.texi
+++ b/doc/cha-intro-tls.texi
@@ -188,6 +188,11 @@ on @xcite{RFC3749}. The supported algorithms are shown below.
 
 @showenumdesc{gnutls_compression_method_t,Supported compression algorithms}
 
+Note that compression enables attacks such as traffic analysis, or even
+plaintext recovery under certain circumstances. To avoid some of these
+attacks GnuTLS allows each record to be compressed independently (i.e.,
+stateless compression), by using a flag to @funcref{gnutls_init}.
+
 @node Weaknesses and countermeasures
 @subsection Weaknesses and countermeasures
 
