--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
-* Version 3.1.2 (unreleased)
+* Version 3.1.2 (released 2012-09-26)
 
 ** libgnutls: Fixed bug in gnutls_x509_trust_list_add_system_trust()
 and gnutls_x509_trust_list_add_trust_mem() that prevented the loading
