--- a/doc/latex/gnutls.bib
+++ b/doc/latex/gnutls.bib
@@ -16,6 +16,15 @@
 	url = "http://www.ietf.org/rfc/rfc2246"
 }
 
+@Misc{ RFC6520,
+	author = "R. Seggelmann, M. Tuexen and M. Williams",
+	title = "{Transport Layer Security (TLS) and Datagram Transport Layer Security (DTLS) Heartbeat Extension}",
+	month = "February",
+	year = "2012",
+	note = "Available from \url{http://www.ietf.org/rfc/rfc6520}",
+	url = "http://www.ietf.org/rfc/rfc6520"
+}
+
 @Misc{ RFC4680,
 	author = "S. Santesson",
 	title = "{TLS Handshake Message for Supplemental Data}",
