--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,18 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 3.1.3 (unreleased)
+
+** libgnutls: Added support for the OCSP Certificate Status
+extension.
+
+** API and ABI modifications:
+gnutls_status_request_ocsp_client: Added
+gnutls_status_request_get_ocsp: Added
+gnutls_status_request_ocsp_server: Added
+gnutls_status_request_ocsp_server_file: Added
+
+
 * Version 3.1.2 (released 2012-09-26)
 
 ** libgnutls: Fixed bug in gnutls_x509_trust_list_add_system_trust()
