--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,15 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 3.0.25 (unreleased)
+
+** libgnutls: Fixed the receipt of session tickets during session resumption.
+Reported by danblack at http://savannah.gnu.org/support/?108146
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 3.0.24 (released 2012-09-26)
 
 ** libgnutls: The %COMPAT keyword, if specified, will tolerate
